# pigeon

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
contrib/gaviota-tb-0.4.5/: CMakeLists.txt  gtb-probe.c
contrib/gaviota-tb-0.4.5/compression/liblzf/: lzfP.h
contrib/gaviota-tb-0.4.5/sysport/: sysport.c
docs/: CNAME  index.html
logo/: pigeon-head.psd  pigeon-logo-small.psd  pigeon-logo.psd
pgn/: pigeon-on-fics.pgn  pigeon-on-icc.pgn
proj/: Activity1.nvact  batch.txt  build-readme.txt  build_gcc.sh  build_msvc.bat  gaviota-tb.vcxproj  gaviota-tb.vcxproj.filters  pigeon-cuda.vcxproj  pigeon.sln  pigeon.sublime-project  pigeon.sublime-workspace  pigeon.vcxproj  pigeon.vcxproj.filters  scratch.txt
proj/doxygen/: Doxyfile  doxygen.css
script/: pigeon-train-old.py  pigeon-train.py  testing.coo  tuning.coo
src/: amoeba.h  bits.h  book.h  cpu-avx2.h  cpu-avx3.h  cpu-avx512.h  cpu-neon.h  cpu-sse2.h  cpu-sse4.h  cuda.h  defs.h  engine.h  eval.h  fen.h  gpu-cuda.h  gpu.h  jobs.h  kernel.cu  material.h  movelist.h  negamax.h  neural.h  perft.h  pigeon.cpp  platform.h  position.h  search.h  simd.h  table.h  tb-gaviota.h  terms.inc  thread.h  timer.h  token.h  tune.h  uci.h
